# libaudioverse

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  appveyor.yml  appveyor_upload.py  audio eq cookbook.txt  circle.py  citations.md  contributing.md  convolution_kernel.c  convolution_kernel.h  default_hrtf.hrtf  demo_everything.py  design document.md  early_reflections.py  ecaa.html  expected.txt  fullbuild.bat  handle notes.txt  hrtf file format.txt  icaa.html  icaa.md  icaa2.html  libaudioverse_manual.html  license_replacer.py  main.c  make_cffi.py  nightly_instructions.txt  platform_support.md  polar.py  pycparser ast example.txt  pycparser example.txt  pypirc.cfg  readme.md  release_manager.py  reverb_test.py  (+2 more)
audio_io/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cmake_backend_handler.txt
audio_io/include/audio_io/: audio_io.hpp
audio_io/include/audio_io/private/: audio_outputs.hpp  com.hpp  latency_predictor.hpp  logging.hpp  mixing_matrices.hpp  output_worker_thread.hpp  sample_format_converter.hpp  semaphore.hpp
audio_io/logger_singleton/: CMakeLists.txt  README.md
audio_io/logger_singleton/include/: logger_singleton.hpp
audio_io/logger_singleton/include/logger_singleton/: logger_singleton.hpp
audio_io/logger_singleton/src/logger_singleton/: logger_singleton.cpp
audio_io/logger_singleton/src/tests/: test_logger.cpp
audio_io/powercores/: .travis.yml  CMakeLists.txt  README.md
audio_io/powercores/include/powercores/: exceptions.hpp  thread_local_variable.hpp  thread_pool.hpp  threadsafe_queue.hpp  utilities.hpp
audio_io/powercores/src/: CMakeLists.txt
audio_io/powercores/src/powercores/: CMakeLists.txt  thread_pool.cpp  utilities.cpp
audio_io/speex_resampler_cpp/: .travis.yml  CMakeLists.txt  license.speex  readme.md
audio_io/speex_resampler_cpp/include/: speex_resampler_cpp.hpp
audio_io/speex_resampler_cpp/src/: exceptions.cpp  resampler_function.cpp  speex_resampler.c  speex_resampler.h
audio_io/src/audio_io/: initialization.cpp  logging.cpp  output_worker_thread.cpp
audio_io/src/tests/: enumeration.cpp  output.cpp
bindings/: backend_base.py  (+10 more)
logger_singleton/: CMakeLists.txt  README.md  appveyor.yml
logger_singleton/src/logger_singleton/: logger_singleton.cpp
speex_resampler_cpp/: CMakeLists.txt  appveyor.yml  readme.md
speex_resampler_cpp/include/: speex_resampler_cpp.hpp
speex_resampler_cpp/src/: exceptions.cpp  resampler_class.cpp  resampler_function.cpp
src/examples/: 3d.c  3d.cpp  CMakeLists.txt  amplitude_panner.cpp  asynchronous_audio.c  asynchronous_audio.cpp  automation.cpp  enumerate_devices.cpp  enumerate_outputs.cpp  file.c  file.cpp  hrtf.c  hrtf.cpp  mixer.c  mixer.cpp  panner.cpp  sine.cpp  synchronous_audio.c
src/libaudioverse/: CMakeLists.txt  audio_output.c  audio_output.cpp  audio_thread.cpp  buffer.cpp  callbacks.cpp  connections.cpp  convolution_kernel.c  devices.cpp  dspmath.c  dspmath.cpp  error.cpp  events.cpp  functiontables.c  functiontables.cpp  graphs.c  graphs.h  hrtf.c  hrtf.cpp  initialization.c  initialization.cpp  interleaving.c  interleaving.cpp  logging.cpp  main.c  memory.cpp  memory_manager.c  memory_manager.cpp  node.cpp  nodes.c  nodes.cpp  objects.c  objects.cpp  planner.cpp  properties.c  properties.cpp  resampler.cpp  server.cpp  simulation.cpp  speex_resample.c  (+5 more)
src/libaudioverse/3d/: environment.cpp  matrix.c  simpleenvironment.cpp  source.cpp  sources.c  sources.cpp  world.c  world.cpp
src/libaudioverse/audio_backends/: common.cpp  openal.cpp  portaudio.cpp  public.cpp  winmm.cpp
src/libaudioverse/audio_devices/: device_negociation.c  device_negociation.cpp  device_negotiation.cpp  devices.c  devices.cpp  portaudio.c  portaudio.cpp
src/libaudioverse/automators/: automators.cpp  envelope.cpp  linear_ramp.cpp  set.cpp
src/libaudioverse/data/: hadamard.cpp  mixing_matrices.cpp  panning_maps.cpp
src/libaudioverse/dsp/: complex.cpp  db.cpp  euclid.cpp  hadamard_matrix.cpp  householder_matrix.cpp  iir.cpp  ringmod.cpp
src/libaudioverse/file_io/: file_reader.cpp  file_writer.cpp  libsndfile_buffer_wrapper.cpp
src/libaudioverse/implementations/: amplitude_panner.cpp  biquad.cpp  block_convolver.cpp  convolver.cpp  crossfadingdelayline.cpp  delayline.cpp  delayringbuffer.cpp  dopleringdelayline.cpp  dopplering_delay_line.cpp  feedback_delay_network.cpp  fft_convolver.cpp  file_streamer.cpp  hrtf_panner.cpp  iir.cpp  interpolated_delay_line.cpp  multipanner.cpp  nested_allpass_network.cpp  panner.cpp
src/libaudioverse/kernels/: adding.cpp  convolution.cpp  dot.cpp  interleaving.cpp  mixing_matrix.cpp  multiplication_addition.cpp  multiplying.cpp  panning.cpp  resamplers.cpp
src/libaudioverse/metadata/: metadata.cpp  metadata.py  metadata.t  metadata.y
src/libaudioverse/nodes/: NOISE.cpp  additive_saw.cpp  additive_square.cpp  additive_triangle.cpp  allpass.cpp  amplitude_panner.cpp  attenuator.c  attenuator.cpp  biquad.cpp  blit.cpp  buffer.cpp  buffer_timeline.cpp  convolver.cpp  crossfader.cpp  crossfading_delay.cpp  custom.cpp  dc_blocker.cpp  delay.cpp  dopplering_delay.cpp  fdn_reverb.cpp  feedback_delay_network.cpp  fft_convolver.cpp  file.c  file.cpp  file_streamer.cpp  filtered_delay.cpp  first_order_filter.cpp  gain.cpp  graph_listener.cpp  hard_limiter.c  hard_limiter.cpp  hrtf.c  hrtf.cpp  iir.cpp  late_reflections.cpp  leaky_integrator.cpp  mixer.c  mixer.cpp  multifile.cpp  multipanner.cpp  (+14 more)
src/libaudioverse/objects/: NOISE.cpp  amplitude_panner.cpp  attenuator.cpp  biquad.cpp  custom.cpp  delay.cpp  feedback_delay_network.cpp  file.cpp  graph_listener.cpp  hard_limiter.cpp  hrtf.cpp  iir.cpp  mixer.cpp  multifile.cpp  multipanner.cpp  pull.cpp  push.cpp  ringmod.cpp  sine.cpp
src/libaudioverse/threading/: crossthread_ringbuffer.c  crossthread_ringbuffer.cpp  threads.cpp
src/libaudioverse/utils/: biquad.cpp  file_reader.cpp  hrtf.cpp  resampler.cpp
src/utils/: CMakeLists.txt  profiler.cpp  time_convolution.c  time_convolution.cpp  time_delay_lines.cpp  time_helper.cpp  time_helper.hpp  time_mixer.cpp
(+497 files in other folders)
