macro(example name)
add_executable(${name} ${name}.cpp)
TARGET_LINK_LIBRARIES(${name} libaudioverse)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
set_property( TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/examples")
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
set_property(TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples")
endmacro()
example(automation)
example(file)
example(hrtf)
example(3d)
example(panner)
example(enumerate_devices)
