macro(util name)
add_executable(${name} ${name}.cpp time_helper.cpp)
TARGET_LINK_LIBRARIES(${name} libaudioverse)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set_property(TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/utils")
    set_property(TARGET ${name} PROPERTY LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/utils")
    set_property(TARGET ${name} PROPERTY ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/utils")
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
SET_PROPERTY(TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY  "${CMAKE_BINARY_DIR}/utils")
endmacro()
util(time_convolution)
util(time_delay_lines)
util(profiler)