macro(test name)
add_executable(${name} ${name}.cpp)
SET_PROPERTY(TARGET ${name} PROPERTY RUNTIME_OUTPUT_DIRECTORY  "${CMAKE_BINARY_DIR}/tests")
target_link_libraries(${name} powercores)
add_test(NAME ${name}, COMMAND ${name})
endmacro()

test(test_at_thread_exit)
test(test_get_thread_id)
test(test_queue_multithreaded)
test(test_queue_singlethreaded)
test(test_thread_local_variable)
test(test_thread_pool_barrier)
test(test_thread_pool_basic)
test(test_thread_pool_result)